apps/sydneyqt/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sydneyqt
  namespace: sydneyqt
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: sydneyqt
