apps/sydneyqt/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:  sydneyqt
  namespace: sydneyqt
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # external-dns.alpha.kubernetes.io/target: "homelab-tunnel.tribz.cloud"
    # external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    hajimari.io/appName: sydneyqt
    hajimari.io/icon: multimedia
    # nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    # nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    # nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sydneyqt.tribz.cloud
      secretName: sydneyqt-tls-certificate
  rules:
    - host: sydneyqt.tribz.cloud
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: sydneyqt
                port:
                  number: 8080
